# linkedlist_generic

./: .gitignore  Makefile.am  README  autogen.sh  configure.ac
src/: Makefile.am  linked_list.h  main.c
